obey umask rules when saving new file

REVIEW: 122612
BUG: 343158